@startuml

class Jugador {
    +recibirDanio(danio: int):void
    -sinVida():bool
    +obtenerRecursos(enemigo:Enemigo):void
    +mostrarOpciones():void
    -construirDefensa():void
    -pasarTurno():void
}

interface Recurso {
    {abstract} +modificarRecurso(cantidad:int):void
}

class Vida {
    -vida
    +modificarRecurso(cantidad:int):void
    -verificarVida():void
}

class Credito {
    -credito
    +modificarRecurso(cantidad:int):void
}

Recurso <|.. Vida
Recurso <|.. Credito
Jugador "1" o-- "*" Recurso

@enduml